# contexthub

./: README.md  docker-compose.yml
.kiro/steering/: product.md  structure.md  tech.md
client/: package.json  pnpm-lock.yaml
client/src/: App.tsx  main.tsx
client/src/api/: chat.ts  client.ts  documents.ts  search.ts
client/src/components/: ChatMessage.tsx  CitationCard.tsx  DocumentTable.tsx  FileDropzone.tsx  Layout.tsx
client/src/hooks/: useChat.ts  useDocuments.ts  useSearch.ts
client/src/pages/: DocumentListPage.tsx  SearchChatPage.tsx  UploadPage.tsx
client/src/theme/: index.ts
client/src/types/: index.ts
docs/: INDEX.md  api.md  architecture.md  domain.md  features.md  project-overview.md  tasks.md  tech-stack.md
server/: pyproject.toml
server/app/: main.py
server/app/clients/: bedrock_client.py  opensearch_client.py  s3_client.py
server/app/core/: config.py
server/app/models/: document.py
server/app/repositories/: document_repository.py
server/app/routers/: chat.py  documents.py  search.py
server/app/schemas/: chat.py  document.py  search.py
server/app/services/: chat_service.py  document_service.py  pipeline_service.py  search_service.py
server/app/utils/: chunker.py  text_extractor.py
